--- a/sample/dreamweaver-templates.html
+++ b/sample/dreamweaver-templates.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!--[if IE 9]>    <html class="no-js ie9 oldie" lang="en"> <![endif]-->
-<!--[if (gt IE 9)]><!--> <html class="no-js" lang="en"><!-- InstanceBegin template="/Templates/2-column.dwt" codeOutsideHTMLIsLocked="false" --> <!--<![endif]-->
+<!--[if (gt IE 9)]><!--> <html class="no-js" lang="en"><!-- InstanceBegin template="/Templates/1-column.dwt" codeOutsideHTMLIsLocked="false" --> <!--<![endif]-->
 <head>
 <!-- 
 California State Template
@@ -26,7 +26,7 @@ Based on Twitter Bootstrap
 </head>
 
 <!-- possible body classes are "primary" and "two-column" -->
-<body class="two-column">
+<body class="">
 
 <header role="banner" id="header" class="global-header">
 	<div id="skip-to-content"><a href="#main-content">Skip to Main Content</a></div>    
@@ -58,7 +58,6 @@ Based on Twitter Bootstrap
         <!--#include virtual="/ssi/navigation.html" -->
     
     </div>
-	
     <div class="header-decoration"></div>
 </header>
 
@@ -77,37 +76,18 @@ Based on Twitter Bootstrap
                     <li>2 column</li>
                     <li>2 column with ribbon</li>
                 </ul>
-                <p>The templates with &quot;ribbon&quot; contain the large header with the &quot;swoosh&quot; embellishment. The ribbon templates are generally recommended for use as a homepage template. The 1 column and 2 column templates without the ribbon are recommended for internal pages.</p>
-                <h2>Optional Slideshow</h2>
-                <p>Pages created using the Ribbon templates  include a special Dreamweaver option for showing or hiding the <a href="/sample/rotating-header-banner.html">rotating slideshow</a> module commonly found on the homepage. By default the slideshow is turned on in the template, but it can be turned off by going to the 
-                    <mark>Modify &gt; Template Properties</mark>
-                    menu in Dreamweaver
-                and toggle the Show OptionalSlideshow checkbox. Below is a screenshot showing the option highlighted in red.</p>
+                <p>The templates with &quot;ribbon&quot; contain the primary, large and slideshow headers, see <a href="page-templates.html">Page Templates</a> for more information on header types. The ribbon templates are generally recommended for use as a homepage template. The 1 column and 2 column templates without the ribbon are recommended for internal pages.                </p>
+                <h2>Optional Banner</h2>
+                <p>Pages created using the ribbon templates  include Dreamweaver options for showing or hiding the various banner types. By default the primay banner is turned on in the template, but it can be turned off or swapped by going to the 
+                    <mark><strong>Edit</strong> (Modify in older versions ) <strong>&gt;</strong> <strong>Template Properties</strong></mark>
+                    menu in Dreamweaver and toggle  the checkbox of each banner type. </p>
+				<p><span class="label label-warning">NOTE:</span> There can only be <mark><strong>one </strong></mark>banner option selected at a time, having more than one type marked as <mark><strong>True</strong></mark> will break the page layout.</p>
                 <p><img src="images/dw-optionalslideshow.png" alt=""/></p>
-                <p><span class="label label-info">NOTE:</span> Please refer to the <a href="slideshow-header-banner.html">Rotating Header Banner</a> page for details on editing the slideshow</p>
+                <p>Please refer to <a href="page-templates.html">Page Templates</a> for details on editing the content of each banner type.</p>
+              <p>&nbsp;</p>
             </article>
         <!-- InstanceEndEditable -->
         </main>
-        <div class="main-secondary">
-        <!-- InstanceBeginEditable name="SecondaryContent" -->
-            <div class="profile-banner">
-                <div class="inner" style="background:url(/images/banner/banner-guy.png) no-repeat right bottom">
-                    <div class="banner-subtitle">Government Entity Title</div>
-                    <div class="banner-title">Official Name</div>
-                    <div class="banner-link"><a href="/">Associated Link</a></div>
-                </div>
-            </div>
-            
-            <div class="panel panel-standout">
-                <div class="panel-heading">
-                    <h2><span class="ca-gov-icon-info"></span> Panel Style D</h2>
-                </div>
-                <div class="panel-body">
-                    <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur blandit tempus porttitor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
-                </div>
-            </div>
-        <!-- InstanceEndEditable -->
-        </div>
     </div>
 </div>
 
