--- a/ssi/navigation.html
+++ b/ssi/navigation.html
@@ -71,7 +71,7 @@ Options are: megadropdown dropdown singlelevel
         </li>
 
         <li class="nav-item">
-            <a href="/" class="first-level-link"><span class="ca-gov-icon-info-bubble" aria-hidden="true"></span>About</a>
+            <a href="/about.html" class="first-level-link"><span class="ca-gov-icon-info-bubble" aria-hidden="true"></span>About</a>
             <div class="sub-nav">
                 <div class="half offset-half">
                     <ul class="second-level-nav">
@@ -157,11 +157,11 @@ Options are: megadropdown dropdown singlelevel
             <a href="/" class="first-level-link"><span class="ca-gov-icon-graduate" aria-hidden="true"></span>Instructions</a>
         </li>
         <li class="nav-item">
-            <a href="/" class="first-level-link"><span class="ca-gov-icon-state" aria-hidden="true"></span>Webtools</a>
+            <a href="http://webtools.ca.gov/" target="_blank" class="first-level-link"><span class="ca-gov-icon-state" aria-hidden="true"></span>Webtools</a>
         </li>
      
         <li class="nav-item">
-            <a href="/" class="first-level-link"><span class="ca-gov-icon-lightbulb" aria-hidden="true"></span>Contribute</a>
+            <a href="/contact.html" class="first-level-link"><span class="ca-gov-icon-lightbulb" aria-hidden="true"></span>Contact Us</a>
         </li>
         <li class="nav-item" id="nav-item-search">
             <a href="javascript:;" class="first-level-link"><span class="ca-gov-icon-search" aria-hidden="true"></span>Search</a>
