--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@ Based on Twitter Bootstrap
 			  </li>
 			  <li><strong>PHP</strong><br>
 		      Not yet available, coming December 2016</li>
-			  <li><a href="http://caweb.ca.gov/" target="_blank"><strong>WordPress CMS</strong></a><br>
+			  <li><strong>WordPress CMS</strong><br>
 			    Please contact 
 		      <a href="mailto:Info.Eservices@state.ca.gov">Info.Eservices@state.ca.gov</a> for more information</li>
 			</ul>
