--- a/ssi/navigation.html
+++ b/ssi/navigation.html
@@ -108,7 +108,7 @@ Options are: megadropdown dropdown singlelevel
 
         <!-- LEFT ALIGNED IMAGE -->
         <li class="nav-item">
-            <a href="/" class="first-level-link"><span class="ca-gov-icon-flowchart" aria-hidden="true"></span>Structure</a>
+            <a href="../structure.html" class="first-level-link"><span class="ca-gov-icon-flowchart" aria-hidden="true"></span>Structure</a>
             <div class="sub-nav">
                 <!-- Offset class needed to fix positioning issue caused when positioning the image -->
                 <div class="three-quarters offset-quarter">
@@ -154,7 +154,7 @@ Options are: megadropdown dropdown singlelevel
         </li>
 
         <li class="nav-item">
-            <a href="/" class="first-level-link"><span class="ca-gov-icon-graduate" aria-hidden="true"></span>Instructions</a>
+            <a href="https://github.com/Office-of-Digital-Innovation" class="first-level-link"><span class="ca-gov-icon-download" aria-hidden="true"></span>Download</a>
         </li>
         <li class="nav-item">
             <a href="http://webtools.ca.gov/" target="_blank" class="first-level-link"><span class="ca-gov-icon-state" aria-hidden="true"></span>Webtools</a>
