--- a/structure.html
+++ b/structure.html
@@ -80,7 +80,7 @@ Based on Twitter Bootstrap
               <div class="group">
                 <div class="half">
                   <h2>New Page Structure in v5</h2>
-				  <p>There are several new structural elements in the v5 of the the state template. Most are optional and one is required namely the <code>utility-header.html</code> located in the <code>ssi</code> folder of the tamplate.</p>
+				  <p>There are several new structural elements in the v5 of the state template. Most are optional and one is required namely the <code>utility-header.html</code> located in the <code>ssi</code> folder of the template.</p>
                   <ul class="list-standout">
                     <li><strong>Utility Header</strong><br>
 This is the new header module that is required in the new template containing the Ca.gov logo and several other features. The Utility Header is the top most content bar in the template header area.</li>
@@ -89,7 +89,7 @@ This is the new header module that is required in the new template containing th
                     <li><strong>Settings Bar</strong> <br>
                     This is a fully functioning feature that allows users to increase and decrease the font size as well as toggle to a high contrast viewing mode. The Settings Bar can be seen in the top right corner of the page.</li>
                     <li><strong>Alert Banner</strong> <br>
-                    This is another optinal banner that serves as a tool to communicate important or timely information to your users. More information can be found on the <a href="/sample/alert-banner.html">Alert Banner page</a>.</li>
+                    This is another optional banner that serves as a tool to communicate important or timely information to your users. More information can be found on the <a href="/sample/alert-banner.html">Alert Banner page</a>.</li>
                   </ul>
                   <h2>File and Folder Structure</h2>
                   <p>The following is the file and folder structure for the 2014 State Template package.</p>
