--- a/structure.html
+++ b/structure.html
@@ -89,8 +89,16 @@ This is the new header module that is required in the new template containing th
                     <li><strong>Settings Bar</strong> <br>
                     This is a fully functioning feature that allows users to increase and decrease the font size as well as toggle to a high contrast viewing mode. The Settings Bar can be seen in the top right corner of the page.</li>
                     <li><strong>Alert Banner</strong> <br>
-                    This is another optional banner that serves as a tool to communicate important or timely information to your users. More information can be found on the <a href="/sample/alert-banner.html">Alert Banner page</a>.</li>
+                    This is a banner that serves as a tool to communicate important or timely information to your users. More information can be found on the <a href="/sample/alert-banner.html">Alert Banner page</a>.</li>
                   </ul>
+                  <h2>Server Side Iincludes</h2>
+                  <p>Several common components (such as page headers, footers, navigation, etc.) are included in pages using Server Side Includes (SSI). Note that the web server that hosts the State Template should be configured to process SSI's with the .html extension.</p>
+                  <h2>Icon Fonts</h2>
+                  <p><a href="/sample/icon-fonts.html">Icon Fonts</a> are also included as part of the State Template. These icon fonts were developed by OTECH, with some additions from other sources.</p>
+                  <p>The Sample Pages included with the State Template package include a list of available icon fonts, as well as instructions on how to use them in page markup. </p>
+                  <h2>&nbsp;</h2>
+                </div>
+                <div class="half">
                   <h2>File and Folder Structure</h2>
                   <p>The following is the file and folder structure for the 2014 State Template package.</p>
                   <ul class="list-standout">
@@ -104,14 +112,7 @@ This is the new header module that is required in the new template containing th
                       </p>
                     </li>
                   </ul>
-                  <p>&nbsp;</p>
-                </div>
-                <div class="half">
-                  <h2>Server Side Iincludes</h2>
-                  <p>Several common components (such as page headers, footers, navigation, etc.) are included in pages using Server Side Includes (SSI). Note that the web server that hosts the State Template should be configured to process SSI's with the .html extension.</p>
-                  <h2>Icon Fonts</h2>
-                  <p><a href="/sample/icon-fonts.html">Icon Fonts</a> are also included as part of the State Template. These icon fonts were developed by OTECH, with some additions from other sources.</p>
-                  <p>The Sample Pages included with the State Template package include a list of available icon fonts, as well as instructions on how to use them in page markup. </p>
+                  <p></p>
                   <h2>Mime Type Configurations</h2>
                   <p>Newer versions of IIS (such as 8.5) already have mime types defined for fonts. However, older versions may need to be configured to serve those mime types for fonts. The same may apply for other web servers such as Apache HTTP Server. Below is a list of the mime types that must be defined for the 2014 State Template.</p>
                   <ul class="list-standout">
