--- a/ssi/navigation.html
+++ b/ssi/navigation.html
@@ -154,7 +154,7 @@ Options are: megadropdown dropdown singlelevel
         </li>
 
         <li class="nav-item">
-            <a href="https://github.com/Office-of-Digital-Innovation" class="first-level-link"><span class="ca-gov-icon-download" aria-hidden="true"></span>Download</a>
+            <a href="https://github.com/Office-of-Digital-Innovation" target="_blank" class="first-level-link"><span class="ca-gov-icon-download" aria-hidden="true"></span>Download</a>
         </li>
         <li class="nav-item">
             <a href="http://webtools.ca.gov/" target="_blank" class="first-level-link"><span class="ca-gov-icon-state" aria-hidden="true"></span>Webtools</a>
