--- a/sample/modules/list-multi-unordered.html
+++ b/sample/modules/list-multi-unordered.html
@@ -1,27 +1,27 @@
 <ul>
-    <li>This is how top-level ordered list items will appear
+    <li>This is how top-level unordered list items will appear
         <ol>
-            <li>This is how lower-level unordered list items will appear
+            <li>This is how lower-level ordered list items will appear
                 <ul>
-                    <li>This is how your lower-level ordered list items will appear</li>
+                    <li>This is how your lower-level unordered list items will appear</li>
                 </ul>
             </li>
         </ol>
     </li>
-    <li>This is how top-level ordered list items will appear
+    <li>This is how top-level unordered list items will appear
         <ol>
-            <li>This is how lower-level unordered list items will appear
+            <li>This is how lower-level ordered list items will appear
                 <ul>
-                    <li>This is how your lower-level ordered list items will appear</li>
+                    <li>This is how your lower-level unordered list items will appear</li>
                 </ul>
             </li>
         </ol>
     </li>
-    <li>This is how top-level ordered list items will appear
+    <li>This is how top-level unordered list items will appear
         <ol>
-            <li>This is how lower-level unordered list items will appear
+            <li>This is how lower-level ordered list items will appear
                 <ul>
-                    <li>This is how your lower-level ordered list items will appear</li>
+                    <li>This is how your lower-level unordered list items will appear</li>
                 </ul>
             </li>
         </ol>
