Adding custom.css refference and file

--- a/ssi/head-css-js.html
+++ b/ssi/head-css-js.html
@@ -29,6 +29,9 @@ Select a color scheme:
 
 <link rel="stylesheet" href="/css/colorscheme-oceanside.css">
 
+<!-- Custom CSS -->
+<link rel="stylesheet" href="/css/custom.css">
+
 <!-- selectivizr.com, emulates CSS3 pseudo-classes and attribute selectors in Internet Explorer 6-8 -->
 <!--[if (lt IE 9) & (!IEMobile)]>
 <script src="/js/libs/selectivizr-min.js"></script>
