Fixing Featured Search behaviour
The use of .primary cladd in the body tag will not change the behaviour
of the featured search box

--- a/sample/page-templates.html
+++ b/sample/page-templates.html
@@ -23,7 +23,7 @@ Based on Twitter Bootstrap
 
 </head>
 
-<body class="primary">
+<body>
 
 <header role="banner" id="header" class="global-header">
 	<div id="skip-to-content"><a href="#main-content">Skip to Main Content</a></div>
@@ -110,7 +110,7 @@ Based on Twitter Bootstrap
            
             <p><span class="label label-info">Note:</span> Some examples go to a new page.</p>
             <h2>Backwards Compatability</h2>
-            <p> In v4 of the State Template page layouts were controlled by applying the <code>.primary</code> class to the <code>&lt;body&gt;</code> element which enabled the taller header image. For greater flexibility and control over header images, the approach was changed to use a more modular approach. The <code>.primary</code> class is used to determine if the various banner types remain on the page in the mobile screen sizes. </p>
+            <p> In v4 of the State Template page layouts were controlled by applying the <code>.primary</code> class to the <code>&lt;body&gt;</code> element which enabled the taller header image. For greater flexibility and control over header images, the layout was changed to use a more modular approach. The <code>.primary</code> class is now used to determine if the various banner types remain on the page in the mobile screen sizes. </p>
             <p>&nbsp;</p>
             
         </main>
