--- a/sample/event-list.html
+++ b/sample/event-list.html
@@ -65,7 +65,7 @@ Based on Twitter Bootstrap
             </ol>
             
             <h1>Event List</h1>
-            <p>An event list contains a repeating group of event items. To begin, wrap this module in a <code>&lt;section class="event-list"&gt;</code>. Then use <code>&lt;article class="event-item"&gt;</code> to group each intividual event together.</p>
+            <p>An event list contains a repeating group of event items. To begin, wrap this module in a <code>&lt;section class="event-list"&gt;</code>. Then use <code>&lt;article class="event-item"&gt;</code> to group each individual event together.</p>
             <p>An <code>.event-item</code> has the following primary child elements.</p>
             <ul>
                 <li><code>.title</code> - A short title that is linkable to event detail</li>
