Accessible menus and V4 compatible menu style
- Added state template v4 megamenu styles and demo page.
- Removed x clear icon from input fields in IE
- Added accessible megamenu
- Updated source js and less files with accessible menu
- Changed selector form #navigation to .main-navigation in
nav-megamenu.less

--- a/sample/index.html
+++ b/sample/index.html
@@ -80,6 +80,7 @@
         <h2>Navigation Samples</h2>
         <ul>
           <li><a href="navigation-megamenu.html">Megamenu Navigation</a></li>
+            <li><a href="navigation-megamenu-original.html">State Template v4 Original Megamenu</a></li>
           <li><a href="navigation-single.html">Single Level Navigation</a></li>
           <li><a href="navigation-dropdown.html">Dropdown Navigation</a></li>
           <li><a href="navigation-active.html">Setting the Active Navigation Item</a></li>
