--- a/sample/modules/nav-singlelevel-standard-mobile.html
+++ b/sample/modules/nav-singlelevel-standard-mobile.html
@@ -1,5 +1,5 @@
 <!-- Top Level Navigation Only -->
-<nav id="navigation" class="main-navigation singlelevelnav auto-highlight">
+<nav id="navigation" class="main-navigation singlelevelnav auto-highlight no-icons">
     <ul id="nav_list" class="top-level-nav">
         <li class="home-link nav-item"><a href="/" class="first-level-link"><span id="nav_home_container" class="ca-gov-icon-home" aria-hidden="true"></span><span class="sr-only">Home</span></a></li>
         <li class="nav-item"><a href="/sample/" class="first-level-link">Examples</a></li>
