--- a/sample/navigation-single.html
+++ b/sample/navigation-single.html
@@ -73,6 +73,7 @@ Based on Twitter Bootstrap
 <h2>More Navigation Samples</h2>
 	<ul>
 		<li><a href="navigation-megamenu.html">Megamenu Navigation</a></li>
+        <li><a href="navigation-megamenu-original.html">State Template v4 Original Megamenu</a></li>
         <li><a href="navigation-dropdown.html">Dropdown Navigation</a></li>	
      </ul>
      
