--- a/sample/navigation-standard-mobile.html
+++ b/sample/navigation-standard-mobile.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
@@ -77,6 +77,7 @@ Based on Twitter Bootstrap
             <h2>More Navigation Samples</h2>
             <ul>
             	<li><a href="navigation-megamenu.html">Megamenu Navigation</a></li>
+                <li><a href="navigation-megamenu-original.html">State Template v4 Original Megamenu</a></li>
                 <li><a href="navigation-dropdown.html">Dropdown Navigation</a></li>
                 <li><a href="navigation-single.html">Single Level Navigation</a></li>
                 <li><a href="navigation-standard-mobile.html">Non-off-canvas Mobile Navigation</a></li>
