Added more color schemes, fixes and accessibility improvements
-Added color schemes (including two new colorschemes: mono and trinity).
Made sure all theme colors can be changed in colorscheme css
- Added color scheme demo pages
- Added new theme (eureka).
- Added new button (highlight)
- Updated colorscheme less files
- Changed header social link markup
- Added screen reader text
- Updated utility header hover color contrast
- Fixed severe alert color contrast issue
- Updated accordion list so it can use multiple list classes
- Added new radio and checkbox styles
- Made accordeon list and service tiles accessible
- Added new theme (eureka). Added new button (highlight)

--- a/general-landing.html
+++ b/general-landing.html
@@ -442,7 +442,7 @@ Based on Twitter Bootstrap
                         <div class="group">
                             <div class="half">
                                 <div class="media">
-                                    <div class="media-left"><span class="ca-gov-icon-lightbulb text-accent1 biggest"></span></div>
+                                    <div class="media-left"><span class="ca-gov-icon-lightbulb color-primary biggest"></span></div>
                                     <div class="media-body">
                                         <h3 class="h4">Job Opportunities</h3>
                                         <ul class="list-standout">
@@ -468,7 +468,7 @@ Based on Twitter Bootstrap
                             </div>
                             <div class="half">
                                 <div class="media">
-                                    <div class="media-left"><span class="ca-gov-icon-graduate text-accent1 biggest"></span></div>
+                                    <div class="media-left"><span class="ca-gov-icon-graduate color-primary biggest"></span></div>
                                     <div class="media-body">
                                         <h3 class="h4">Training</h3>
                                         <ul class="list-standout">
