--- a/sample/modules/accordion-list.html
+++ b/sample/modules/accordion-list.html
@@ -1,14 +1,21 @@
-<ul class="list-overstated accordion-list">
-    <li>
-        <a class="toggle">Consectetur Fusce Euismod</a>
-        <div class="description">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper.</div>
+<ul id="accordion" class="accordion-list list-overstated" role="tablist" multiselectable="true">
+    <li id="tab1" class="tab" aria-selected="false" aria-controls="panel1" aria-expanded="false" role="tab" tabindex="0">
+        <a>Consectetur Fusce Euismod</a>
     </li>
-    <li>
-        <a class="toggle">Pellentesque Justo Nibh Inceptos</a>
-        <div class="description">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper.</div>
+    <div id="panel1" class="panel" aria-labelledby="tab1" aria-hidden="false" role="tabpanel">
+        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper.
+    </div>
+    <li id="tab2" class="tab" aria-selected="false" aria-controls="panel2" aria-expanded="false" role="tab" tabindex="0">
+        <a>Pellentesque Justo Nibh Inceptos</a>
     </li>
-    <li>
-        <a class="toggle">Nullam Nibh Fermentum Vehicula</a>
-        <div class="description">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper.</div>
+    <div id="panel2" class="panel" aria-labelledby="tab2" aria-hidden="true" role="tabpanel">
+        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper.
+    </div>
+
+    <li id="tab3" class="tab" aria-selected="false" aria-controls="panel3" aria-expanded="false" role="tab" tabindex="0">
+        <a>Nullam Nibh Fermentum Vehicula</a>
     </li>
+    <div id="panel3" class="panel" aria-labelledby="tab3" aria-hidden="true" role="tabpanel">
+        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper.
+    </div>
 </ul>
