--- a/sample/modules/form-checkboxes.html
+++ b/sample/modules/form-checkboxes.html
@@ -16,3 +16,20 @@
         USA
     </label>
 </div>
+
+<div class="m-b">
+    <label class="check">
+        <input class="hidden-up pos-abs top-0 left-0" checked="" type="checkbox">
+        <span class="btn btn-md btn-block color-white--checked bg-primary--checked rounded-0">Canada</span>
+    </label>
+
+    <label class="check">
+        <input class="hidden-up pos-abs top-0 left-0" type="checkbox">
+        <span class="btn btn-md btn-block color-white--checked bg-primary--checked rounded-0">UK</span>
+    </label>
+
+    <label class="check">
+        <input class="hidden-up pos-abs top-0 left-0" type="checkbox">
+        <span class="btn btn-md btn-block color-white--checked bg-primary--checked rounded-0">Mexico</span>
+    </label>
+</div>
