--- a/sample/modules/form-radios.html
+++ b/sample/modules/form-radios.html
@@ -29,3 +29,20 @@
         Sweden
     </label>
 </div>
+
+<div class="m-b">
+    <label class="check">
+        <input class="hidden-up pos-abs top-0 left-0" name="radGroupBtn1_1"  checked="" type="radio">
+        <span class="btn btn-lg btn-block bg-highlight--checked rounded-0">Italy</span>
+    </label>
+
+    <label class="check">
+        <input class="hidden-up pos-abs top-0 left-0" name="radGroupBtn1_1" type="radio">
+        <span class="btn btn-lg btn-block bg-highlight--checked rounded-0">UK</span>
+    </label>
+
+    <label class="check">
+        <input class="hidden-up pos-abs top-0 left-0" name="radGroupBtn1_1" type="radio">
+        <span class="btn btn-lg btn-block bg-highlight--checked rounded-0">USA</span>
+    </label>
+</div>
