--- a/sample/modules/nav-megamenu-mobile-icons.html
+++ b/sample/modules/nav-megamenu-mobile-icons.html
@@ -60,7 +60,6 @@
                             </div>
                             <div class="media-body">
                                 <div class="title"><a href="">Public profile</a></div>
-                                <div class="subtitle">Subtitle</div>
                                 <div class="teaser">Cras justo odio, dapibus ac facilisis in, egestas eget quam.</div>
                                 <a href="" class="btn btn-default btn-xs pull-right">Read More</a>
                             </div>
@@ -72,7 +71,6 @@
                             </div>
                             <div class="media-body">
                                 <div class="title"><a href="">News Title</a></div>
-                                <div class="subtitle">Subtitle</div>
                                 <div class="teaser">Cras justo odio, dapibus ac facilisis in, egestas eget quam.</div>
                                 <a href="" class="btn btn-default btn-xs pull-right">Read More</a>
                             </div>
@@ -83,7 +81,7 @@
         </li>
 
         <li class="nav-item">
-            <a href="/" class="first-level-link"><span class="ca-gov-icon-info-bubble" aria-hidden="true"></span>About</a>
+            <a href="/about.html" class="first-level-link"><span class="ca-gov-icon-info-bubble" aria-hidden="true"></span>About</a>
             <div class="sub-nav">
                 <div class="half offset-half">
                     <ul class="second-level-nav">
@@ -120,7 +118,7 @@
 
         <!-- LEFT ALIGNED IMAGE -->
         <li class="nav-item">
-            <a href="/" class="first-level-link"><span class="ca-gov-icon-flowchart" aria-hidden="true"></span>Structure</a>
+            <a href="/structure.html" class="first-level-link"><span class="ca-gov-icon-flowchart" aria-hidden="true"></span>Structure</a>
             <div class="sub-nav">
                 <!-- Offset class needed to fix positioning issue caused when positioning the image -->
                 <div class="three-quarters offset-quarter">
@@ -171,14 +169,14 @@
         </li>
 
         <li class="nav-item">
-            <a href="/" class="first-level-link"><span class="ca-gov-icon-graduate" aria-hidden="true"></span>Instructions</a>
+            <a href="https://github.com/Office-of-Digital-Innovation" target="_blank" class="first-level-link"><span class="ca-gov-icon-download" aria-hidden="true"></span>Download</a>
         </li>
         <li class="nav-item">
-            <a href="/" class="first-level-link"><span class="ca-gov-icon-state" aria-hidden="true"></span>Webtools</a>
+            <a href="http://webtools.ca.gov/"  target="_blank" class="first-level-link"><span class="ca-gov-icon-state" aria-hidden="true"></span>Webtools</a>
         </li>
      
         <li class="nav-item">
-            <a href="/" class="first-level-link"><span class="ca-gov-icon-lightbulb" aria-hidden="true"></span>Contribute</a>
+            <a href="/contact.html" class="first-level-link"><span class="ca-gov-icon-lightbulb" aria-hidden="true"></span>Contact Us</a>
         </li>
         <li class="nav-item" id="nav-item-search">
             <a href="javascript:;" class="first-level-link"><span class="ca-gov-icon-search" aria-hidden="true"></span>Search</a>
