--- a/sample/modules/nav-megamenu-orig.html
+++ b/sample/modules/nav-megamenu-orig.html
@@ -42,7 +42,7 @@ Options are: megadropdown dropdown singlelevel
             </div>
         </li>
         <li class="nav-item">
-            <a href="/" class="first-level-link has-sub"><span class="ca-gov-icon-info-bubble" aria-hidden="true"></span>Link 2</a>
+            <a href="/about.html" class="first-level-link has-sub"><span class="ca-gov-icon-info-bubble" aria-hidden="true"></span>About</a>
             <span class="mobile-control toggle-sub-nav closed"><span class="ca-gov-icon-menu-toggle-open" aria-hidden="true"></span><span class="sr-only">Sub Menu Toggle</span></span><div class="sub-nav">
                 <ul class="second-level-nav">
                     <li>
@@ -154,7 +154,7 @@ Options are: megadropdown dropdown singlelevel
             </div>
         </li>
         <li class="nav-item">
-            <a href="/" class="first-level-link has-sub"><span class="ca-gov-icon-flowchart" aria-hidden="true"></span>Link 3</a>
+            <a href="/structure.html" class="first-level-link has-sub"><span class="ca-gov-icon-flowchart" aria-hidden="true"></span>Structure</a>
             <span class="mobile-control toggle-sub-nav closed"><span class="ca-gov-icon-menu-toggle-open" aria-hidden="true"></span><span class="sr-only">Sub Menu Toggle</span></span>
             <div class="sub-nav with-image-sm-right">
                 <ul class="second-level-nav">
@@ -185,7 +185,7 @@ Options are: megadropdown dropdown singlelevel
 
         </li>
         <li class="nav-item">
-            <a href="/" class="first-level-link has-sub"><span class="ca-gov-icon-graduate" aria-hidden="true"></span>Link 4</a>
+            <a href="https://github.com/Office-of-Digital-Innovation" target="_blank" class="first-level-link has-sub"><span class="ca-gov-icon-download" aria-hidden="true"></span>Download</a>
             <span class="mobile-control toggle-sub-nav closed"><span class="ca-gov-icon-menu-toggle-open" aria-hidden="true"></span><span class="sr-only">Sub Menu Toggle</span></span>
             <div class="sub-nav with-image-md-right">
                 <ul class="second-level-nav">
@@ -206,7 +206,7 @@ Options are: megadropdown dropdown singlelevel
             </div>
         </li>
         <li class="nav-item">
-            <a href="/" class="first-level-link has-sub"><span class="ca-gov-icon-state" aria-hidden="true"></span>Link 5</a>
+            <a href="http://webtools.ca.gov/" target="_blank" class="first-level-link"><span class="ca-gov-icon-state" aria-hidden="true"></span>Webtools</a>
             <span class="mobile-control toggle-sub-nav closed"><span class="ca-gov-icon-menu-toggle-open" aria-hidden="true"></span><span class="sr-only">Sub Menu Toggle</span></span>
             <div class="sub-nav with-image-sm-left">
                 <ul class="second-level-nav">
@@ -239,7 +239,7 @@ Options are: megadropdown dropdown singlelevel
             </div>
         </li>
         <li class="nav-item">
-            <a href="/" class="first-level-link has-sub"><span class="ca-gov-icon-lightbulb" aria-hidden="true"></span>Link 6</a>
+            <a href="/contact.html" class="first-level-link"><span class="ca-gov-icon-lightbulb" aria-hidden="true"></span>Contact Us</a>
             <span class="mobile-control toggle-sub-nav closed"><span class="ca-gov-icon-menu-toggle-open" aria-hidden="true"></span><span class="sr-only">Sub Menu Toggle</span></span>
             <div class="sub-nav with-image-md-left">
                 <ul class="second-level-nav">
@@ -258,6 +258,9 @@ Options are: megadropdown dropdown singlelevel
                 </ul>
                 <div class="sub-nav-decoration" style="background:url('/sample/images/sample-nav-image2.jpg')"></div>
             </div>
+        </li>
+        <li class="nav-item" id='nav-item-search'>
+            <a href="javascript:;" class="first-level-link"><span class="ca-gov-icon-search" aria-hidden="true"></span>Search</a>
         </li>
     </ul>
 </nav>
