--- a/sample/modules/nav-singlelevel.html
+++ b/sample/modules/nav-singlelevel.html
@@ -8,23 +8,23 @@
             	<a href="/sample/" class="first-level-link"><span class="ca-gov-icon-gears"></span>Examples</a>
             </li>
        		<li class="nav-item">
-            	<a href="/" class="first-level-link"><span class="ca-gov-icon-info-bubble" aria-hidden="true"></span>About</a>
+            	<a href="/about.html" class="first-level-link"><span class="ca-gov-icon-info-bubble" aria-hidden="true"></span>About</a>
             </li>
             
             <li class="nav-item">
-            	<a href="/" class="first-level-link"><span class="ca-gov-icon-flowchart" aria-hidden="true"></span>Structure</a>
+            	<a href="/structure.html" class="first-level-link"><span class="ca-gov-icon-flowchart" aria-hidden="true"></span>Structure</a>
             </li>
             <li class="nav-item">
-            	<a href="/" class="first-level-link"><span class="ca-gov-icon-graduate" aria-hidden="true"></span>Instructions</a>
+                <a href="https://github.com/Office-of-Digital-Innovation" target="_blank" class="first-level-link"><span class="ca-gov-icon-download" aria-hidden="true"></span>Download</a>
         	</li>
             <li class="nav-item">
-            	<a href="/" class="first-level-link"><span class="ca-gov-icon-state" aria-hidden="true"></span>Webtools</a>
+                <a href="http://webtools.ca.gov/" target="_blank" class="first-level-link"><span class="ca-gov-icon-state" aria-hidden="true"></span>Webtools</a>
         	</li>
              <li class="nav-item">
-            	<a href="/" class="first-level-link"><span class="ca-gov-icon-lightbulb" aria-hidden="true"></span>Contribute</a>
+                 <a href="/contact.html" class="first-level-link"><span class="ca-gov-icon-lightbulb" aria-hidden="true"></span>Contact Us</a>
         	</li>
         	<li class="nav-item" id="nav-item-search">
-            	<a href="javascript:;" class="first-level-link"><span class="ca-gov-icon-search" aria-hidden="true"></span>Search</a>
+                <a href="javascript:;" class="first-level-link"><span class="ca-gov-icon-search" aria-hidden="true"></span>Search</a>
         	</li>
     </ul>
 </nav>
