--- a/ssi/mobile-controls.html
+++ b/ssi/mobile-controls.html
@@ -1,7 +1,7 @@
 <!-- mobile navigation controls -->
 <div class="mobile-controls">
 
-    <span class="mobile-control toggle-menu"><span class="ca-gov-icon-menu" aria-hidden="true"></span><span class="sr-only">Menu</span></span>
+    <button class="mobile-control toggle-menu" aria-expanded="false" aria-controls="navigation"><span class="ca-gov-icon-menu" aria-hidden="true"></span><span class="sr-only">Menu</span></button>
     <span class="mobile-control-group mobile-header-icons">
     	
         <!-- Add more mobile controls here. These will be on the right side of the mobile page header section -->
