--- a/sample/modules/nav-megamenu.html
+++ b/sample/modules/nav-megamenu.html
@@ -47,7 +47,6 @@ Options are: megadropdown dropdown singlelevel
                             </div>
                             <div class="media-body">
                                 <div class="title"><a href="">Public profile</a></div>
-                                <div class="subtitle">Subtitle</div>
                                 <div class="teaser">Cras justo odio, dapibus ac facilisis in, egestas eget quam.</div>
                                 <a href="" class="btn btn-default btn-xs pull-right">Read More</a>
                             </div>
@@ -59,7 +58,6 @@ Options are: megadropdown dropdown singlelevel
                             </div>
                             <div class="media-body">
                                 <div class="title"><a href="">News Title</a></div>
-                                <div class="subtitle">Subtitle</div>
                                 <div class="teaser">Cras justo odio, dapibus ac facilisis in, egestas eget quam.</div>
                                 <a href="" class="btn btn-default btn-xs pull-right">Read More</a>
                             </div>
@@ -70,7 +68,7 @@ Options are: megadropdown dropdown singlelevel
         </li>
 
         <li class="nav-item">
-            <a href="/" class="first-level-link"><span class="ca-gov-icon-info-bubble" aria-hidden="true"></span>About</a>
+            <a href="/about.html" class="first-level-link"><span class="ca-gov-icon-info-bubble" aria-hidden="true"></span>About</a>
             <div class="sub-nav">
                 <div class="half offset-half">
                     <ul class="second-level-nav">
