--- a/sample/modules/nav-singlelevel-standard-mobile.html
+++ b/sample/modules/nav-singlelevel-standard-mobile.html
@@ -3,9 +3,9 @@
     <ul id="nav_list" class="top-level-nav">
         <li class="home-link nav-item"><a href="/" class="first-level-link"><span id="nav_home_container" class="ca-gov-icon-home" aria-hidden="true"></span><span class="sr-only">Home</span></a></li>
         <li class="nav-item"><a href="/sample/" class="first-level-link">Examples</a></li>
-        <li class="nav-item"><a href="/" class="first-level-link">Link 2</a></li>
-        <li class="nav-item"><a href="/" class="first-level-link">Link 3</a></li>
-        <li class="nav-item"><a href="/" class="first-level-link">Link 4</a></li>
-        <li class="nav-item"><a href="/" class="first-level-link">Link 5</a></li>
+        <li class="nav-item"><a href="/about.html" class="first-level-link">About</a></li>
+        <li class="nav-item"><a href="https://github.com/Office-of-Digital-Innovation" target="_blank" class="first-level-link">Download</a></li>
+        <li class="nav-item"><a href="http://webtools.ca.gov/" target="_blank" class="first-level-link">Webtools</a></li>
+        <li class="nav-item"><a href="/contact.html" class="first-level-link"><span class="ca-gov-icon-lightbulb" aria-hidden="true"></span>Contact Us</a></li>
     </ul>
 </nav>
