--- a/sample/modules/tabs.html
+++ b/sample/modules/tabs.html
@@ -2,10 +2,10 @@
     <span class="ca-gov-icon-favorite"></span>
     <!-- Nav tabs - NOTE: UNIQUE ID IS REQUIRED -->
     <ul id="homeTabs" class="nav nav-tabs responsive" role="tablist">
-        <li class="active"><a href="#home" role="tab" data-toggle="tab">Home</a></li>
-        <li><a href="#profile" role="tab" data-toggle="tab">Profile</a></li>
-        <li><a href="#messages" role="tab" data-toggle="tab">Messages</a></li>
-        <li><a href="#settings" role="tab" data-toggle="tab">Settings</a></li>
+        <li class="active" role="tab"><a href="#home" data-toggle="tab">Home</a></li>
+        <li role="tab"><a href="#profile" data-toggle="tab">Profile</a></li>
+        <li role="tab"><a href="#messages" data-toggle="tab">Messages</a></li>
+        <li role="tab"><a href="#settings" data-toggle="tab">Settings</a></li>
     </ul>
     <!-- Tab panes -->
     <div class="tab-content responsive">
