--- a/ssi/utility-header.html
+++ b/ssi/utility-header.html
@@ -8,10 +8,10 @@
                     <li><a href="/"><span class="ca-gov-icon-home" aria-hidden="true"></span><span class="sr-only">Home</span></a></li>
                     
                   
-                    <li><a class="ca-gov-icon-facebook" title="Share via Facebook" tabindex="0"></a></li>
-                    <li><a class="ca-gov-icon-twitter" title="Share via Twitter" tabindex="0"></a></li>
-                    <li><a class="ca-gov-icon-google-plus" title="Share via Google+" tabindex="0"></a></li>
-                    <li><a class="ca-gov-icon-email" title="Share via email" tabindex="0"></a></li>
+                    <li><a class="ca-gov-icon-facebook" title="Share via Facebook"><span class="sr-only">Facebook</span></a></li>
+                    <li><a class="ca-gov-icon-twitter" title="Share via Twitter"><span class="sr-only">Twitter</span></a></li>
+                    <li><a class="ca-gov-icon-google-plus" title="Share via Google+"><span class="sr-only">Google+</span></a></li>
+                    <li><a class="ca-gov-icon-email" title="Share via email"><span class="sr-only">Email</span></a></li>
                 </ul>
             </div>
             <div class="half settings-links">
