--- a/ssi/head-css-js.html
+++ b/ssi/head-css-js.html
@@ -1,5 +1,4 @@
 <!-- head content, for all pages -->
-
 <!-- Use highest compatibility mode -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -34,19 +33,27 @@ Select a color scheme:
 <!--[if (lt IE 9) & (!IEMobile)]>
 <script src="/js/libs/selectivizr-min.js"></script>
 <![endif]-->
-
 <!-- modernizr.com, feature detection -->
 <script src="/js/libs/modernizr-2.0.6.min.js"></script>
-<script src="/js/libs/modernizr-extra.min.js" ></script>
+<script src="/js/libs/modernizr-extra.min.js"></script>
 
 
 <!-- Load jQuery from CDN with fallback to local copy -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
 <script>
     //Fall back to local copy if no jquery found
     if (typeof jQuery == 'undefined') {
-        document.write(unescape("%3Cscript src='/js/libs/jquery-1.12.4.min.js' type='text/javascript'%3E%3C/script%3E"));
+        document.write(unescape("%3Cscript src='/js/libs/jquery-3.2.1.min.js' type='text/javascript'%3E%3C/script%3E"));
     }
+</script>
+<!-- Load jQuery migrate from CDN with fallback to local copy -->
+<script src="https://code.jquery.com/jquery-migrate-3.0.1.js"></script>
+<script>
+        //Fall back to local copy if no jQuery migrate found
+        if (typeof jQuery.migrateWarnings == 'undefined') { // or typeof jQuery.fn.live == 'undefined'
+            document.write(unescape("%3Cscript src='/js/libs/jquery-migrate-3.0.1.js' type='text/javascript'%3E%3C/script%3E"));
+        }
+
 </script>
 
 
@@ -67,12 +74,10 @@ Select a color scheme:
 <!--[if IE]>
 <meta http-equiv="cleartype" content="on">
 <![endif]-->
-
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
   <script src="/js/libs/html5shiv.min.js"></script>
   <script src="/js/libs/respond.min.js"></script>
 <![endif]-->
-
 <!-- Include Google Analytics -->
 <!-- virtual="/ssi/analytics.html" -->
