--- a/ssi/head-css-js.html
+++ b/ssi/head-css-js.html
@@ -47,7 +47,7 @@ Select a color scheme:
     }
 </script>
 <!-- Load jQuery migrate from CDN with fallback to local copy -->
-<script src="https://code.jquery.com/jquery-migrate-3.0.1.js"></script>
+<script src="http://code.jquery.com/jquery-migrate-3.0.1.min.js"></script>
 <script>
         //Fall back to local copy if no jQuery migrate found
         if (typeof jQuery.migrateWarnings == 'undefined') { // or typeof jQuery.fn.live == 'undefined'
